--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Вход</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" type="text/css" href="enter.css">
 	<link rel="shortcut icon" href="icon/login.ico">
 </head>
 <body>
-	<section class ="section">
+	<main class ="main">
 	<div class="bg"></div>
 	<form class = "form">
 		<h1 class = "maintext">Добро пожаловать в сообщество программистов!</h1>		
@@ -25,6 +26,10 @@
 		</div>
 		<button class ="button">Войти</button>
 	</form>	
-	</section>
+	</main>
 </body>
 </html>
+
+
+
+
